ops/argocd/iris-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: iris-classification
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: iris-classification
      env: prod
  template:
    metadata:
      name: iris-classification
      labels:
        app: iris-classification
        env: prod
    spec:
      containers:
      - image: ksr1729/iris_classification:2f7830e
        name: iris-classification
        readinessProbe:
          exec:
            command:
            - cat
            - /tmp/healthy
            initialDelaySeconds: 5
            periodSeconds: 5
          ports:
            - containerPort: 80
