ops/argocd/iris-svc-canary.yml
apiVersion: v1
kind: Service
metadata:
  name: iris-classification
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: iris-classification
    selector: canary
