ops/argocd/iris-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-classification
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: iris-classification
