ops/argocd/iris-classification-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: app-ingress
spec:
  backend:
    serviceName: iris-classification
    servicePort: 5000
